--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     <script src="./js/jquery-3.4.1.min.js"></script>
     <!--bootstrap-->
     <script src="./js/bootstrap.bundle.min.js"></script>
-    <script src="./js/js.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
